Adjust ekimex color and add logo

--- a/public/ekimex/assets/css/style.css
+++ b/public/ekimex/assets/css/style.css
@@ -15,12 +15,12 @@ body {
 }
 
 a {
-  color: #C75300;
+  color: #343B10;
   text-decoration: none;
 }
 
 a:hover {
-  color: #C75300;
+  color: #343B10;
   text-decoration: none;
 }
 
@@ -43,7 +43,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #C75300;
+  background: #343B10;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -57,7 +57,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #FF6A00;
+  background: #47501D;
   color: #fff;
 }
 
@@ -86,19 +86,19 @@ h6 {
 }
 
 #header .header-container {
-  background: #fff;
 }
 
 #header.header-scrolled {
-  background: #fff;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  background: #343B10;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.5);
   top: 0;
 }
 
 #header .logo {
   overflow: hidden;
   padding: 16px 30px 12px 30px;
-  background: #C75300;
+    width: 250px;
+    height: auto;;
 }
 
 #header .logo h1 {
@@ -118,19 +118,19 @@ h6 {
 #header .logo img {
   padding: 0;
   margin: 0;
-  max-height: 40px;
+  max-height: 80px;
 }
 
 @media (max-width: 992px) {
   #header {
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
     top: 0;
-    background: #C75300;
+    /*background: #343B10;*/
   }
 
   #header.header-scrolled,
   #header .header-container {
-    background: #C75300;
+    /*background: #343B10;*/
   }
 
   #header .logo {
@@ -170,7 +170,7 @@ h6 {
   align-items: center;
   justify-content: space-between;
   padding: 10px 0 10px 30px;
-  color: #36343a;
+  color: #BEBEBE;
   transition: 0.3s;
   font-size: 13px;
   font-weight: 500;
@@ -191,12 +191,12 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #C75300;
+  color: #fff;
 }
 
 .navbar .getstarted,
 .navbar .getstarted:focus {
-  background: #C75300;
+  background: #343B10;
   padding: 10px 25px;
   margin-left: 30px;
   margin-right: 15px;
@@ -207,7 +207,7 @@ h6 {
 .navbar .getstarted:hover,
 .navbar .getstarted:focus:hover {
   color: #fff;
-  background: #FF6A00;
+  background: #47501D;
 }
 
 .navbar .dropdown ul {
@@ -242,7 +242,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #C75300;
+  color: #343B10;
 }
 
 .navbar .dropdown:hover>ul {
@@ -337,7 +337,7 @@ h6 {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #C75300;
+  color: #343B10;
 }
 
 .navbar-mobile .getstarted,
@@ -372,7 +372,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #C75300;
+  color: #343B10;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -438,8 +438,8 @@ h6 {
 }
 
 #hero .btn-get-started:hover {
-  background: #C75300;
-  border: 2px solid #C75300;
+  background: #343B10;
+  border: 2px solid #343B10;
 }
 
 @media (min-width: 1024px) {
@@ -494,7 +494,7 @@ section {
   display: block;
   width: 50px;
   height: 3px;
-  background: #C75300;
+  background: #343B10;
   bottom: 0;
   left: 0;
 }
@@ -557,7 +557,7 @@ section {
   top: 7px;
   position: absolute;
   font-size: 20px;
-  color: #C75300;
+  color: #343B10;
 }
 
 .about .content p:last-child {
@@ -568,7 +568,7 @@ section {
 # Counts
 --------------------------------------------------------------*/
 .counts {
-  background: #C75300;
+  background: #343B10;
   padding: 40px 0 20px 0;
   color: #fff;
 }
@@ -592,7 +592,7 @@ section {
 --------------------------------------------------------------*/
 .why-us .content {
   padding: 30px;
-  background: #C75300;
+  background: #343B10;
   border-radius: 4px;
   color: #fff;
 }
@@ -621,7 +621,7 @@ section {
 }
 
 .why-us .content .more-btn:hover {
-  color: #C75300;
+  color: #343B10;
   background: #fff;
 }
 
@@ -637,7 +637,7 @@ section {
 
 .why-us .icon-boxes .icon-box i {
   font-size: 40px;
-  color: #C75300;
+  color: #343B10;
   margin-bottom: 30px;
 }
 
@@ -691,8 +691,8 @@ section {
 }
 
 .cta .cta-btn:hover {
-  background: #C75300;
-  border: 2px solid #C75300;
+  background: #343B10;
+  border: 2px solid #343B10;
 }
 
 /*--------------------------------------------------------------
@@ -703,6 +703,7 @@ section {
   padding: 40px 20px;
   transition: all ease-in-out 0.3s;
   background: #fff;
+    width: 100% !important;
 }
 
 .services .icon-box .icon {
@@ -710,13 +711,13 @@ section {
   width: 64px;
   height: 64px;
   border-radius: 50px;
-  border: 1px solid #C75300;
+  border: 1px solid #343B10;
   display: flex;
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
   transition: ease-in-out 0.3s;
-  color: #C75300;
+  color: #343B10;
 }
 
 .services .icon-box .icon i {
@@ -746,12 +747,12 @@ section {
 }
 
 .services .icon-box:hover h4 a {
-  color: #C75300;
+  color: #343B10;
 }
 
 .services .icon-box:hover .icon {
   color: #fff;
-  background: #C75300;
+  background: #343B10;
 }
 
 /*--------------------------------------------------------------
@@ -786,7 +787,7 @@ section {
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
   color: #fff;
-  background: #C75300;
+  background: #343B10;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -863,7 +864,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #C75300;
+  color: #343B10;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -899,11 +900,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #C75300;
+  border: 1px solid #343B10;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #C75300;
+  background-color: #343B10;
 }
 
 .portfolio-details .portfolio-info {
@@ -983,7 +984,7 @@ section {
 
 .testimonials .testimonial-item .quote-icon-left,
 .testimonials .testimonial-item .quote-icon-right {
-  color: #C75300;
+  color: #343B10;
   font-size: 26px;
 }
 
@@ -1015,11 +1016,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #C75300;
+  border: 1px solid #343B10;
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #C75300;
+  background-color: #343B10;
 }
 
 /*--------------------------------------------------------------
@@ -1109,7 +1110,7 @@ section {
 }
 
 .team .member .social a:hover {
-  background: #C75300;
+  background: #343B10;
 }
 
 .team .member .social a+a {
@@ -1132,7 +1133,7 @@ section {
   float: left;
   width: 44px;
   height: 44px;
-  background: #C75300;
+  background: #343B10;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1223,7 +1224,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #C75300;
+  background: #343B10;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1232,7 +1233,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: #FF6A00;
+  background: #47501D;
 }
 
 @keyframes animate-loading {
@@ -1348,7 +1349,7 @@ section {
 
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #FF6A00;
+  color: #47501D;
   font-size: 18px;
   line-height: 1;
 }
@@ -1372,7 +1373,7 @@ section {
 
 #footer .footer-top .footer-links ul a:hover {
   text-decoration: none;
-  color: #C75300;
+  color: #343B10;
 }
 
 #footer .footer-newsletter {
@@ -1412,7 +1413,7 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #C75300;
+  background: #343B10;
   color: #fff;
   transition: 0.3s;
   border-radius: 50px;
@@ -1420,7 +1421,7 @@ section {
 }
 
 #footer .footer-newsletter form input[type=submit]:hover {
-  background: #FF6A00;
+  background: #47501D;
 }
 
 #footer .credits {
@@ -1432,7 +1433,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #C75300;
+  background: #343B10;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -1445,7 +1446,7 @@ section {
 }
 
 #footer .social-links a:hover {
-  background: #FF6A00;
+  background: #47501D;
   color: #fff;
   text-decoration: none;
 }
