--- a/public/ekimex/assets/css/style.css
+++ b/public/ekimex/assets/css/style.css
@@ -709,7 +709,7 @@ section {
 .services .icon-box img {
     width: 100%;
     height: 200px;
-    object-fit: cover;
+    /*object-fit: contain;*/
 }
 
 .services .icon-box .icon {
@@ -1305,14 +1305,22 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  color: #444444;
+  color: #fff;
   font-size: 14px;
   background: #f1f0f2;
 }
 
 #footer .footer-top {
   padding: 60px 0 30px 0;
-  background: #f9f8f9;
+  /*background: #f9f8f9;*/
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.4),
+        rgba(0, 0, 0, 0.4)
+    ), url('../img/hero-bg.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 #footer .footer-top .footer-contact {
@@ -1332,13 +1340,13 @@ section {
   line-height: 24px;
   margin-bottom: 0;
   font-family: "Raleway", sans-serif;
-  color: #777777;
+  color: #fff;
 }
 
 #footer .footer-top h4 {
   font-size: 16px;
   font-weight: bold;
-  color: #444444;
+  color: #fff;
   position: relative;
   padding-bottom: 12px;
 }
@@ -1371,15 +1379,14 @@ section {
 }
 
 #footer .footer-top .footer-links ul a {
-  color: #777777;
+  color: #fff;
   transition: 0.3s;
   display: inline-block;
   line-height: 1;
 }
 
 #footer .footer-top .footer-links ul a:hover {
-  text-decoration: none;
-  color: #343B10;
+  text-decoration: underline;
 }
 
 #footer .footer-newsletter {
@@ -1433,7 +1440,11 @@ section {
 #footer .credits {
   padding-top: 5px;
   font-size: 13px;
-  color: #444444;
+  color: #fff;
+}
+
+#footer .credits a {
+    color: #fff ;
 }
 
 #footer .social-links a {
