--- a/public/ekimex/assets/css/style.css
+++ b/public/ekimex/assets/css/style.css
@@ -698,6 +698,7 @@ section {
 /*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
+
 .services .icon-box {
   text-align: center;
   /*padding: 40px 20px;*/
@@ -1308,6 +1309,18 @@ section {
   color: #fff;
   font-size: 14px;
   background: #f1f0f2;
+}
+
+.footer-top {
+    padding: 60px 0 30px 0;
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.8),
+        rgba(0, 0, 0, 0.4)
+    ), url('../img/hero-bg.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 #footer .footer-top {
